--- a/src/components/Feedback/FeedbackOptions.module.css
+++ b/src/components/Feedback/FeedbackOptions.module.css
@@ -1,11 +1,14 @@
 .btn__container{
     display: flex;
+    
 }
 .button{
-    padding: 15px;
-    font-size: 38px;
+    padding: 5px 10px;
+    font-size: 26px;
     margin-left: 20px;
     border-radius: 10px;
+    border: none;
+    background-color: rgb(195, 175, 214);
 }
 .button:hover,
 .button:focus{
