--- a/src/components/Feedback/FeedbackOptions.module.css
+++ b/src/components/Feedback/FeedbackOptions.module.css
@@ -12,5 +12,6 @@
 }
 .button:hover,
 .button:focus{
-    box-shadow:  5px 5px 20px rgb(202, 11, 186);;
+    box-shadow:  0px 0px 0px 5px rgb(255 255 255);
+    background-color: rgb(156, 72, 235);
 }
